# samaritan

./: Cargo.toml  PLANNING.md  README.md  REGISTRY.md  SCHEMA.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/analyzer/: Cargo.toml
crates/analyzer/src/: explain.rs  lib.rs  strategy.rs
crates/analyzer/tests/: breadth.rs  thesis.rs
crates/dispatch/: Cargo.toml
crates/dispatch/src/: dedup.rs  lib.rs  validate.rs
crates/dispatch/tests/: dispatch.rs
crates/graph/: Cargo.toml
crates/graph/src/: config.rs  lib.rs  model.rs
crates/graph/tests/: traversal.rs
crates/planning/: Cargo.toml
crates/planning/src/: assemble.rs  cache.rs  error.rs  keys.rs  lib.rs  model.rs  ollama.rs  orchestrate.rs  scope.rs  select.rs  stages.rs  time.rs
crates/planning/tests/: model_pipeline.rs  planning.rs
crates/registry/: Cargo.toml  mining.yaml
crates/registry/src/: calendar.rs  config.rs  finding.rs  lib.rs  validate.rs  validate_relations.rs
crates/registry/tests/: load.rs
crates/samaritan/: Cargo.toml
crates/samaritan/examples/: dump_requirementset.rs
crates/samaritan/src/: main.rs
crates/schema/: Cargo.toml
crates/schema/src/: common.rs  constraints.rs  domains.rs  intent.rs  lib.rs  parsed.rs  plan.rs  question.rs  requirement.rs  requirement_set.rs  strategy.rs
crates/schema/tests/: roundtrip.rs
docs/: ANALYZER.md  BUILD_PLAN.md  ENGINE.md  GRAPH.md  MEREDITH_API.md  PIPELINE.md  README.md  REQUIREMENTSET.md
scripts/: check-purity.sh
src/: main.rs
