[package]
name = "samaritan-dispatch"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# Fan out the plan, run analyzers in parallel on one pinned world_version,
# collect one RequirementSet. Orchestration only — no reasoning.
[dependencies]
samaritan-schema.workspace = true
samaritan-graph.workspace = true
samaritan-registry.workspace = true
samaritan-analyzer.workspace = true
serde_json.workspace = true

[dev-dependencies]
samaritan-planning.workspace = true
chrono.workspace = true

[lints]
workspace = true
