[package]
name = "samaritan-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# The relation graph — decomposes, partitions, confounds, influences, rolls_up.
# Pure. Depends only on schema. Never on planning or dispatch.
[dependencies]
samaritan-schema.workspace = true

[lints]
workspace = true
