[package]
name = "samaritan-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# The relation graph — decomposes, partitions, confounds, influences, rolls_up.
# Pure structure and traversal. Depends only on schema. Never on planning or
# dispatch. Holds no vocabulary — the registry validates references against it.
[dependencies]
samaritan-schema.workspace = true
serde.workspace = true

[dev-dependencies]
serde_yaml.workspace = true

[lints]
workspace = true
