[package]
name = "samaritan-planning"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# Question to InvestigationPlan. Stage 4 builds the deterministic stages
# (constraint resolution, strategy and analyzer lookup, plan assembly); the
# model-backed stages arrive in stage 6.
[dependencies]
samaritan-schema.workspace = true
samaritan-graph.workspace = true
samaritan-registry.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
thiserror.workspace = true
ureq.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
