[package]
name = "samaritan-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# Load and validate the registry. The spec, executable — every rule in
# REGISTRY.md becomes a check that fails loudly. Depends on schema and graph.
# Never on planning or dispatch.
[dependencies]
samaritan-schema.workspace = true
samaritan-graph.workspace = true

[lints]
workspace = true
