[package]
name = "samaritan"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# The binary. Wires the pipeline together, question in, RequirementSet out.
[dependencies]
samaritan-schema.workspace = true
samaritan-graph.workspace = true
samaritan-registry.workspace = true
samaritan-planning.workspace = true
samaritan-dispatch.workspace = true

[lints]
workspace = true
